Implement method to retrieve responsibles by sedrvicename
